--- a/index.html
+++ b/index.html
@@ -3,25 +3,36 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles/index.css" />
     <title>Deividas Rimkus Website</title>
   </head>
   <body>
     <header>
-      <div class="logo">Deividas Rimkus</div>
+      <a href="/">
+        <div class="logo">Deividas Rimkus</div>
+      </a>
     </header>
     <section class="posts">
       <a href="/posts/first-post-sort-of.html" class="card">
-        <div class="thumbnail"><img src="/images/first-post-sort-of.webp" alt="first post, sort of thumbnail" /></div>
+        <div class="thumbnail">
+          <img src="/assets/images/first-post-sort-of.webp" alt="first post, sort of thumbnail" />
+        </div>
         <h2>First post, sort of</h2>
-        <div class="prev"></div>
-        <div class="date"></div>
+        <div class="preview">This isn't exactly my first post, but it is a first for this website...</div>
+        <div class="date">April 28, 2024</div>
       </a>
     </section>
     <footer>
       <div class="socials">
-        <a href="https://github.com/Lisviks" target="_blank" class="github">GitHub</a>
-        <a href="https://twitter.com/DRimkusDev" target="_blank" class="x">X</a>
-        <a href="https://www.linkedin.com/in/deividas-rimkus-8306904b/" target="_blank" class="linkedin">LinkedIn</a>
+        <a href="https://github.com/Lisviks" target="_blank" class="github"
+          ><img src="/assets/icons/github.svg" alt=""
+        /></a>
+        <a href="https://twitter.com/DRimkusDev" target="_blank" class="x"
+          ><img src="/assets/icons/xTwitter.svg" alt=""
+        /></a>
+        <a href="https://www.linkedin.com/in/deividas-rimkus-8306904b/" target="_blank" class="linkedin"
+          ><img src="/assets/icons/linkedin.svg" alt=""
+        /></a>
       </div>
       <p>Copyright © Deividas Rimkus 2024</p>
     </footer>
