light and dark themes

--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles/index.css" />
+    <script src="/js/theme.js" defer></script>
     <title>Deividas Rimkus Website</title>
   </head>
-  <body>
+  <body class="light">
     <header>
       <a href="/">
         <div class="logo">Deividas Rimkus</div>
       </a>
+      <div class="theme-switch"><img src="/assets/icons/moon-icon.svg" alt="theme switch" /></div>
     </header>
     <section class="posts">
       <a href="/posts/first-post-sort-of.html" class="card">
