save theme setting to local storage

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="/js/theme.js" defer></script>
     <title>Deividas Rimkus Website</title>
   </head>
-  <body class="light">
+  <body>
     <header>
       <a href="/">
         <div class="logo">Deividas Rimkus</div>
