--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="theme-switch"><img src="/assets/icons/moon-icon.svg" alt="theme switch" /></div>
     </header>
     <section class="posts">
-      <a href="/posts/first-post-sort-of.html" class="card">
+      <a href="/posts/first-post-sort-of" class="card">
         <div class="thumbnail">
           <img src="/assets/images/first-post-sort-of.webp" alt="first post, sort of thumbnail" />
         </div>
