--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
       <div class="theme-switch"><img src="/assets/icons/moon-icon.svg" alt="theme switch" /></div>
     </header>
     <section class="posts">
+      <a href="/posts/simple-theme-switch/" class="card">
+        <div class="thumbnail">
+          <img src="/assets/images/simple-theme-switch.webp" alt="simple theme switch thumbnail" />
+        </div>
+        <h2>Simple Theme Switch</h2>
+        <div class="preview">This isn't exactly my first post, but it is a first for this website...</div>
+        <div class="date">May 5, 2024</div>
+      </a>
       <a href="/posts/first-post-sort-of" class="card">
         <div class="thumbnail">
           <img src="/assets/images/first-post-sort-of.webp" alt="first post, sort of thumbnail" />
