--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
           <img src="/assets/images/simple-theme-switch.webp" alt="simple theme switch thumbnail" />
         </div>
         <h2>Simple Theme Switch</h2>
-        <div class="preview">This isn't exactly my first post, but it is a first for this website...</div>
-        <div class="date">May 5, 2024</div>
+        <div class="preview">This is a simple theme switch using just HTML, CSS, and JavaScript...</div>
+        <div class="date">May 6, 2024</div>
       </a>
       <a href="/posts/first-post-sort-of" class="card">
         <div class="thumbnail">
