meta description tags

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Discover Deividas Rimkus' blog where personal exploration meets tech innovation. Dive into easy-to-follow tutorials, insightful reflections, and stories of programming and web development. Join a journey of continuous learning and creativity with each post!"
+    />
     <link rel="stylesheet" href="styles/index.css" />
     <script src="https://kit.fontawesome.com/a5d860658d.js" crossorigin="anonymous"></script>
     <script src="/js/theme.js" defer></script>
