open graph meta

--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Deividas Rimkus" />
+    <meta property="og:description" content="Personal blog website and coding playground." />
+    <meta property="og:url" content="https://deividas.blog/" />
+    <meta property="og:image" content="/assets/images/og_image.webp" />
+    <meta property="article:section" content="Blog Site" />
+
     <meta
       name="description"
       content="Discover Deividas Rimkus' blog where personal exploration meets tech innovation. Dive into easy-to-follow tutorials, insightful reflections, and stories of programming and web development. Join a journey of continuous learning and creativity with each post!"
@@ -10,7 +19,7 @@
     <link rel="stylesheet" href="styles/index.css" />
     <script src="https://kit.fontawesome.com/a5d860658d.js" crossorigin="anonymous"></script>
     <script src="/js/theme.js" defer></script>
-    <title>Deividas Rimkus Website</title>
+    <title>Deividas Rimkus</title>
   </head>
   <body>
     <header>
