twitter card meta tags

--- a/index.html
+++ b/index.html
@@ -7,10 +7,23 @@
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Deividas Rimkus" />
-    <meta property="og:description" content="Personal blog website and coding playground." />
+    <meta
+      property="og:description"
+      content="Personal blog website and coding playground. Where I will post random things that I create or learn."
+    />
     <meta property="og:url" content="https://deividas.blog/" />
     <meta property="og:image" content="/assets/images/og_image.webp" />
     <meta property="article:section" content="Blog Site" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@DRimkust" />
+    <meta name="twitter:creator" content="@DRimkust" />
+    <meta name="twitter:title" content="Deividas Rimkus" />
+    <meta
+      name="twitter:description"
+      content="Personal blog website and coding playground. Where I will post random things that I create or learn."
+    />
+    <meta name="twittes:image" content="/assets/images/og_image.webp" />
+    <meta name="twitter:image:alt" content="Website cover image" />
 
     <meta
       name="description"
