--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
       name="twitter:description"
       content="Personal blog website and coding playground. Where I will post random things that I create or learn."
     />
-    <meta name="twittes:image" content="/assets/images/og_image.webp" />
+    <meta
+      name="twittes:image"
+      content="https://raw.githubusercontent.com/Lisviks/website/main/assets/images/og_image.webp"
+    />
     <meta name="twitter:image:alt" content="Website cover image" />
 
     <meta
