--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
       content="Personal blog website and coding playground. Where I will post random things that I create or learn."
     />
     <meta property="og:url" content="https://deividas.blog/" />
-    <meta property="og:image" content="/assets/images/og_image.webp" />
+    <meta
+      property="og:image"
+      content="https://raw.githubusercontent.com/Lisviks/website/main/assets/images/og_image.webp"
+    />
     <meta property="article:section" content="Blog Site" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@DRimkust" />
