fix twitter card typo

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta property="og:url" content="https://deividas.blog/" />
     <meta
       property="og:image"
-      content="https://raw.githubusercontent.com/Lisviks/website/main/assets/images/twitter_image2-1.webp"
+      content="https://raw.githubusercontent.com/Lisviks/website/main/assets/images/og_image.webp"
     />
     <meta property="article:section" content="Blog Site" />
     <meta name="twitter:card" content="summary_large_image" />
@@ -26,7 +26,7 @@
       content="Personal blog website and coding playground. Where I will post random things that I create or learn."
     />
     <meta
-      name="twittes:image"
+      name="twitter:image"
       content="https://raw.githubusercontent.com/Lisviks/website/main/assets/images/og_image.webp"
     />
     <meta name="twitter:image:alt" content="Website cover image" />
