twitter card image fix test

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
       content="Personal blog website and coding playground. Where I will post random things that I create or learn."
     />
     <meta
-      name="twitter:image"
-      content="https://raw.githubusercontent.com/Lisviks/website/main/assets/images/twitter_image2-1.webp"
+      name="twitter:image:src"
+      content="https://raw.githubusercontent.com/Lisviks/website/main/assets/images/og_image.webp"
     />
     <meta name="twitter:image:alt" content="Website cover image" />
 
