--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <script src="/js/theme.js" defer></script>
     <title>Deividas Rimkus</title>
   </head>
-  <body>
+  <body class="hidden">
     <header>
       <a href="/">
         <div class="logo">Deividas Rimkus</div>
