--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
   <body class="hidden">
     <header>
       <a href="/">
-        <div class="logo">Deividas Rimkus</div>
+        <div class="logo">
+          <!-- <img src="/assets/images/deividas-rimkus-header-logo-dark.webp" alt="" /> -->
+        </div>
       </a>
       <div class="theme-switch"><img src="/assets/icons/moon-icon.svg" alt="theme switch" /></div>
     </header>
