fix header logo and add favicon

--- a/index.html
+++ b/index.html
@@ -38,14 +38,13 @@
     <link rel="stylesheet" href="styles/index.css" />
     <script src="https://kit.fontawesome.com/a5d860658d.js" crossorigin="anonymous"></script>
     <script src="/js/theme.js" defer></script>
+    <link rel="icon" type="image/x-icon" href="/assets/icons/favicon.png" />
     <title>Deividas Rimkus</title>
   </head>
   <body class="hidden">
     <header>
       <a href="/">
-        <div class="logo">
-          <!-- <img src="/assets/images/deividas-rimkus-header-logo-dark.webp" alt="" /> -->
-        </div>
+        <div class="logo"></div>
       </a>
       <div class="theme-switch"><img src="/assets/icons/moon-icon.svg" alt="theme switch" /></div>
     </header>
