--- a/index.html
+++ b/index.html
@@ -41,6 +41,19 @@
     <link rel="icon" type="image/x-icon" href="/assets/icons/favicon.png" />
     <title>Deividas Rimkus</title>
   </head>
+
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-GSNTB6M151"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'G-GSNTB6M151');
+  </script>
+
   <body class="hidden">
     <header>
       <a href="/">
