--- a/index.html
+++ b/index.html
@@ -49,11 +49,15 @@
     />
     <link rel="stylesheet" href="styles/index.css" />
     <script src="https://kit.fontawesome.com/a5d860658d.js" crossorigin="anonymous"></script>
+
     <script src="/js/theme.js" defer></script>
+    <script src="/js/scrollToTop.js" defer></script>
+
     <link rel="icon" type="image/x-icon" href="/assets/icons/favicon.png" />
     <title>Deividas Rimkus</title>
   </head>
   <body class="hidden">
+    <div class="scroll-to-top-btn"><i class="fa-solid fa-arrow-up fa-2x"></i></div>
     <header>
       <a href="/">
         <div class="logo"></div>
