some lighthouse improvements

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="preconnect" href="https://region1.google-analytics.com" />
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-GSNTB6M151"></script>
     <script>
@@ -48,7 +49,7 @@
       content="Discover Deividas Rimkus' blog where personal exploration meets tech innovation. Dive into easy-to-follow tutorials, insightful reflections, and stories of programming and web development. Join a journey of continuous learning and creativity with each post!"
     />
     <link rel="stylesheet" href="styles/index.css" />
-    <script src="https://kit.fontawesome.com/a5d860658d.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/a5d860658d.js" crossorigin="anonymous" defer></script>
 
     <script src="/js/theme.js" defer></script>
     <script src="/js/scrollToTop.js" defer></script>
